# SafeDeps

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MAIN_ROADMAP.md  MANIFEST.in  Makefile  NOTICE  README.md  RELEASE_NOTES_2026-05-22.md  RELEASE_NOTES_2026-05-26.md  RELEASE_NOTES_2026-06-11.md  RELEASE_NOTES_2026-06-12-0.3.1.md  RELEASE_NOTES_2026-06-12-0.3.2.md  RELEASE_NOTES_2026-06-21-0.5.1.md  RELEASE_NOTES_2026-06-21-0.6.0.md  RELEASE_NOTES_2026-06-21.md  RELEASE_NOTES_TEMPLATE.md  ROADMAP.md  ROADMAP_OLD.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  e2e-npm.yml  e2e-nuget.yml  e2e-pip.yml  e2e-poetry.yml  quality.yml  release-template.yml  safedeps.yml  security.yml
docs/: ARCHITECTURE.md  BYPASS_AND_APPROVALS.md  CI_INTEGRATION.md  COMPARISON.md  ECOSYSTEM_SUPPORT.md  KNOWN_LIMITATIONS.md  POLICY.md  THREAT_MODEL.md  UI_DOCUMENTATION.md
docs/images/: README.md
docs/maintainers/: PRE_RELEASE_REVIEW.md  RELEASE_PROCESS.md
docs/release/: RELEASE_PROCESS.md
examples/bad-project/: .gitmodules  .npmrc  Bad.csproj  README.md  package.json  requirements.txt
examples/ci/: README.md
examples/ci/azure/: azure-pipelines.yml
examples/ci/github/: safedeps.yml
examples/ci/gitlab/: .gitlab-ci.yml
examples/safe-project/: README.md  Safe.csproj  package-lock.json  package.json  packages.lock.json
release-artifacts/: release-manifest.json
release-notes/old/: RELEASE_NOTES_2026-05-25.md  RELEASE_NOTES_2026-05-26.md  RELEASE_NOTES_2026-06-11.md  RELEASE_NOTES_2026-06-12.md  RELEASE_NOTES_2026-06-13-0.3.3.md  RELEASE_NOTES_2026-06-13-0.3.4.md  RELEASE_NOTES_2026-06-18-0.4.0.md
safedeps/: cli.py  cli_parser.py  constants.py  dependency_actions.py  doctor.py  exceptions.py  guard.py  guard_backend.py  guard_hooks.py  guard_repo.py  guard_state.py  models.py  package_managers.py  policy.py  reports.py  runtime.py  runtime_guard.py  scan.py  ui_assets.py  ui_dependencies.py  ui_render.py  ui_server.py  ui_state.py  verifiers.py  vulnerability_intel.py
safedeps/scanners/: __init__.py  base.py  git_scanner.py  metadata_signals.py  npm_scanner.py  nuget_scanner.py  pip_scanner.py  typosquat.py
scripts/: bootstrap_dev.sh  check_versions.py  reinstall-safedeps-test.bat  reinstall-safedeps-test.ps1  reinstall-safedeps-test.sh  reset-safedeps.bat  reset-safedeps.ps1  reset-safedeps.sh  validate_artifacts.py
scripts/e2e/: npm_guard_bash.sh  npm_guard_cmd.bat  npm_guard_pwsh.ps1  nuget_scan_bash.sh  nuget_scan_pwsh.ps1  pip_guard_bash.sh  pip_guard_cmd.bat  pip_guard_pwsh.ps1  poetry_lock_scan.py
scripts/release/: bump_version.py  create_release_manifest.py  preflight.py
tests/: test_cli.py
tests/fixtures/: malicious-packages.synthetic.json
tests/golden/: scan_bad_project_snapshot.txt
tests/unit/: test_cli_commands.py  test_cli_parser.py  test_dependency_actions.py  test_docs_claims.py  test_doctor.py  test_exceptions.py  test_guard_backend.py  test_guard_hooks.py  test_guard_repo.py  test_guard_state.py  test_metadata_signals.py  test_policy.py  test_release_workflow_contract.py  test_reports.py  test_runtime.py  test_runtime_guard.py  test_scan.py  test_scanners.py  test_ui_dependencies.py  test_ui_server.py  test_ui_state.py  test_verifiers.py  test_vulnerability_intel.py
