[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safedeps"
version = "0.5.1"
description = "Cross-ecosystem dependency policy gate for safer installs and updates."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Giovanni De Miccoli"}]
keywords = ["security", "supply-chain", "dependencies", "sbom", "audit", "pip", "npm", "nuget"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Environment :: Console",
  "Topic :: Security",
  "Topic :: Software Development :: Build Tools",
]
dependencies = [
  "PyYAML>=6.0",
  "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-timeout>=2.0",
  "pytest-xdist>=3.0",
  "ruff>=0.9",
  "mypy>=1.10",
  "types-PyYAML",
  "setuptools>=77",
  "wheel>=0.42",
  "build>=1.2",
  "twine>=5.0",
]

[project.scripts]
safedeps = "safedeps.cli:main"

[tool.setuptools.package-data]
safedeps = ["assets/*.png"]

[tool.setuptools.packages.find]
include = ["safedeps*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E9", "F401", "F811", "F821", "F841", "B904", "C4", "I", "N", "PIE", "PTH", "RET", "SIM", "UP", "RUF022"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers --strict-config --timeout=30"

[tool.coverage.run]
branch = true
source = ["safedeps"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true

[[tool.mypy.overrides]]
module = "safedeps.guard_state"
disable_error_code = ["attr-defined"]
